--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,4 +1,5 @@
 @import 'flexboxgrid.css';
+@import 'global.scss';
 @import '../components/button/button.scss';
 @import '../components/copy/copy.scss';
 @import '../components/footer/footer.scss';
